# test_tetra_forms

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml
main/: admin.py  forms.py  models.py
main/components/: __init__.py
main/migrations/: 0001_initial.py  0002_book_color.py  0003_person_attachment.py  0004_alter_person_attachment_personaddress_and_more.py  0005_alter_book_delivery_from.py
templates/: base.html  home.html
tetra_testforms/: asgi.py  settings.py  urls.py  wsgi.py
